Fix spacing

--- a/styles/components/featured-pattern.scss
+++ b/styles/components/featured-pattern.scss
@@ -30,5 +30,9 @@
         @apply block text-lg;
       }
     }
+
+    p + p {
+      @apply mt-4;
+    }
   }
 }
